/*using Microsoft.EntityFrameworkCore.Infrastructure;

namespace DDDNetCore.Domain.Staffs
{
    public enum StaffType
    {
        Doctor,
        Nurse,    
        Other    
    }
}*/