@startuml

title Class Diagram



package "Controller"{

class StaffController {
    + GetAll([FromQuery] string staffName = null, [FromQuery] string staffEmail = null, [FromQuery] string  StaffSpecialization = null)
    + GetById(String id)
    + Add(StaffDto dto)
    + Update(String id, StaffDto dto)
    + Delete(String id)
    + Deactivate(String id)
    
}
}

package Domain  {
class Staff {
    - StaffName
    - StaffID
    - LicenseNumber
    - Email
    - PhoneNumber
    - Specialization
    - List<AvailabilitySlots>
    - StaffType
    + Staff(StaffName staffName,StaffID staffID ,LicenseNumber licenseNumber, Email email,PhoneNumber phoneNumber, Specialization Specialization , List<AvailabilitySlots> availabilitySlots, Stafftype stafftype)
    + ChangeSpecialization(Specialization specialization)
    + ChangeAvailabilitySlots(AvailabilitySlots availabilitySlots)
    + ChangePhoneNumber (StaffPhoneNumber staffPhoneNumber)
    + ActivateStaff()
    - DeactivateStaff()
    
}
class StaffName {
    + StaffName(string operationName)
}

class LicenseNumber {
    + LicenseNumber(string licenseNumber)
}

class StaffEmail {
    + Email(string email)
}

class StaffID {
    + StaffID(string StaffID)
}

class StaffPhoneNumber {
    + PhoneNumber(string phoneNumber)
}

class StaffSpecialization {
                - cardiology
                - orthopedics
                - neurology
                - emergency medicine
                - obstetrics and gynaecology
                - internal medicine
                - anesthesiology
                - oncology
                - psychiatry
                - nuclear medicine
                - dermatology
                - family medicine
                - geriatrics
                - radiology
                - critical care medicine
                - nephrology
                - hematology
                - ophthalmology
                - gastroenterology
                - immunology
                - general surgery 
                - endocrinology
                - pediatrics
                - medical genetics
                - pathology
                - urology
}

class AvailabilitySlots {
    + AvailabilitySlots(list<AvailabilitySlots> availabilitySlots)
}
class StaffType {
    - Doctor
    - Nurse
    - Other
  }
}

package "Service"{

class StaffService {
    + GetAllAsync()
    + GetByIdAsync(StaffID id)
    + GetAllByName(string staffName)
    + GetAllByEmail(string staffEmail)
    + GetAllBySpecialization(string StaffSpecialization)
    + GetAllByPhoneNumber(string phoneNumber)
    + DeleteAsync(StaffID id)
    + DeactivateAsync(StaffID id)
    + UpdateAsync(StaffDto dto)
    + AddAsync(StaffDto dto)
    + GenerateLN(StaffDto staffDto,StaffType staffType, List<Staff> list)

}

}
package Repositories{
interface IStaffRepository {
}

interface StaffRepository {
}

class BaseRepository {
    ====
    Base project class
    ====
}
}
package "DTO"{

class StaffMapper {
    + ToDomain(StaffProfileDto dto, StaffID staffID)
    + ToDto(Staff domain)
    + ToDto(Staff Domain)
    + ToListDto(List<Staff> domainList)
}

class StaffDTO {
    - StaffName
    - License Number
    - Email
    - PhoneNumber
    - Specialization
    - List<AvailabilitySlots>  
    - StaffType  
    - StaffID
}
}


StaffController -> StaffService
StaffService ---> StaffMapper : uses
StaffService -> StaffDTO : creates

StaffMapper <-- StaffDTO : enters
StaffMapper ---> Staff : creates

Staff ---> StaffName : has a
Staff ---> LicenseNumber : has a
Staff ---> StaffEmail : has a
Staff ---> StaffPhoneNumber : has a
Staff ---> StaffSpecialization : has a
Staff ---> AvailabilitySlots : has a
Staff --> StaffType
Staff --> StaffID



StaffService --> StaffRepository
StaffRepository --|> BaseRepository
StaffRepository -|> IStaffRepository
@enduml